# a_maze_ing

./: Makefile  README.md  a_maze_ing.py  animation.py  config.py  config.txt  constants.py  file_io.py  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  renderer.py
mazegen/: README.md  __init__.py  directions.py  generator.py
