[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator with multiple algorithms"
requires-python = ">=3.10"
readme = "mazegen/README.md"

[tool.setuptools.packages.find]
include = ["mazegen*"]

[tool.setuptools.package-data]
mazegen = ["README.md"]
